--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
     <head>
         <title>My First Webpage</title>
     </head>
@@ -11,6 +11,99 @@
         <h4>Welcome (h4)</h4>
         <h5>Welcome (h5)</h5>
         <h6>Welcome (h6)</h6>
+        <br>
+        <h1>Paragraph</h1>
+        <p>This is a paragraph</p>
+        <p>This is another <strong>paragraph</strong> of <i>text</i></p>
+        <br>
+        <h1>Links</h1>
+        <a href="https://google.com" target="_blank">Link to Google</a>
+        <h1>Image</h1>
+        <img alt="가로 200px 세로 300px 의 랜덤한 이미지 입니다." src="https://picsum.photos/200/300">
+        <br>
+        <h1>Lists</h1>
+        <ul>
+            <li>
+                <a href="https://naver.com" target="_blank"> naver 이동</a>
+            </li>
+            <li>
+                <a href="https://google.com" target="_blank">google 이동</a>
+            </li>
+            <li>List item</li>
+            <li>
+                <ul>
+                    <li>List item</li>
+                    <li>List item</li>
+                    <li>List item</li>
+                </ul>
+            </li>
+        </ul>
+        <ol>
+            <li>Ordered List Item</li>
+            <li>Ordered List Item</li>
+            <li>Ordered List Item</li>
+        </ol>
+        <br>
+        <h1>Tables</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>First name</th>
+                    <th>Last name</th>
+                    <th>Email</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>한솔</td>
+                    <td>이</td>
+                    <td>gksthf996@naver.com</td>
+                    <td>123</td>
+                </tr>
+                <tr>
+                    <td>길동</td>
+                    <td>홍</td>
+                    <td>gdhong@naver.com</td>
+                    <td>123</td>
+                </tr>
+            </tbody>
+        </table>
+        <br>
+        <h1>Registration Form</h1>
+        <form>
+            <fieldset>
+                <legend>Account</legend>
+                <label for="name">Name</label>
+                <input type="text" id="name" required>
+                <br>
+                <label for="email">이메일</label>
+                <input type="text" id="email" name="email">
+                <br>
+                <label for ="password">비밀번호</label>
+                <input type="password" id="password" name="email">
+            </fieldset>
+            <fieldset>
+                <legend>User Info</legend>
+                <label for="location">주소</label>
+                <select name="location" id="location">
+                    <option value="MA">MA</option>
+                    <option value="NY">NY</option>
+                    <option value="CA">CA</option>
+                </select>
+                <br>
+                <h4>성별</h4>
+                <label for="gender1">남성</label>
+                <input type="radio" name="gender" id="gender1" value="Male">
+                <label for="gender2">여성</label>
+                <input type="radio" name="gender" id="gender2" value="Female">
+                <br>
+                <label for="gender11">남성</label>
+                <input type="checkbox" name="gender" id="gender11" value="Male">
+                <label for="gender22">여성</label>
+                <input type="checkbox" name="gender" id="gender22" value="Female">
+            </fieldset>
+            <input type="submit" value="등록">
+        </form>
     </body>
 </html>
 
