--- a/Javascript실습/index.html
+++ b/Javascript실습/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>웹서버 실습</title>
+    <title>Javascript 실습</title>
+    <script src="default.js"></script>
 </head>
 <body>
-<h1>Hello, world!</h1>
-<h2>웹서버 실습</h2>
+
 </body>
 </html>
