--- a/index.html
+++ b/index.html
@@ -5,10 +5,24 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>웹서버 실습</title>
+    <title>부트스트랩 실습</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
-<h1>Hello, world!</h1>
-<h2>웹서버 실습</h2>
+<h1>안녕하세요 부트스트랩 5!</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4" style="background-color: lightblue">
+            첫번째 열
+        </div>
+        <div class="col-md-4" style="background-color: lightgreen">
+            두번째 열
+        </div>
+        <div class="col-md-4" style="background-color: lightyellow">
+            세번째 열
+        </div>
+    </div>
+</div>
 </body>
 </html>
