--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
           integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
+
+<!--==============그리드===============-->
+
 <!--<h1>안녕하세요 부트스트랩 5!</h1>-->
 <!--<div class="container">-->
 <!--    <div class="row">-->
@@ -25,7 +28,7 @@
 <!--    </div>-->
 <!--</div>-->
 
-<!--==============그리드===============-->
+<!--==========네비게이션===========-->
 
 <nav class="navbar navbar-expand-lg navbar=light bg-light">
     <div class="container">
@@ -52,6 +55,82 @@
         </div>
     </div>
 </nav>
+
+
+<!--=======Alert========-->
+
+<div class="container mt-4">
+    <div class="alert alert-success" role="alert">
+        A simple success alert-check it out!
+    </div>
+</div>
+
+<!--=========Button==========-->
+
+<div class="container mt-4">
+    <button type="button" class="btn btn-primary">Primary</button>
+    <button type="button" class="btn btn-secondary">Primary</button>
+</div>
+
+<!--===========Card===========-->
+
+<div class="container mt-4">
+    <div class="row">
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">
+                        Some quick example text to build on the card title and make up
+                        the bulk of the card's content.
+                    </p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-6">
+            <div class="card">
+                <div class="card-body">
+                    <h5 class="card-title">Card Title</h5>
+                    <p class="card-text">
+                        Some quick example text to build on the card title and make up
+                        the bulk of the card's content.
+                    </p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--==========Form===========-->
+
+<div class="container mt-4">
+    <form action="#">
+        <div class="mb-3">
+            <label for="exampleInputEmail">Email Address</label>
+            <input type="email"
+                   class="form-control"
+                   id="exampleInputEmail"
+            >
+            <div id="emailHelp" class="form-text">
+                We will never share your email with anyone else.
+            </div>
+        </div>
+
+        <div class="mb-3">
+            <label for="exampleInputPassword">Email Address</label>
+            <input type="email"
+                   class="form-control"
+                   id="exampleInputPassword"
+            >
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div>
+
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
