--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>부트스트랩 실습</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+          crossorigin="anonymous">
 </head>
 <body>
 
@@ -72,7 +73,7 @@
     <button type="button" class="btn btn-secondary">Primary</button>
 </div>
 
-<!--===========Card===========-->
+<!--=========Card==========-->
 
 <div class="container mt-4">
     <div class="row">
@@ -103,7 +104,7 @@
     </div>
 </div>
 
-<!--==========Form===========-->
+<!--=========Form==========-->
 
 <div class="container mt-4">
     <form action="#">
@@ -127,6 +128,120 @@
             </div>
             <button type="submit" class="btn btn-primary">Submit</button>
     </form>
+</div>
+
+<!--========Dropdown========-->
+
+<div class="container mt-4">
+    <div class="dropdown">
+        <button class="btn btn-secondary dropdown-toggle"
+                type="button"
+                id="dropdownMenuButton"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+        >
+            Dropdown button
+        </button>
+        <ul class="dropdown-menu">
+            <li>
+                <a href="#" class="dropdown-item">Action</a>
+            </li>
+            <li>
+                <a href="#" class="dropdown-item">Another action</a>
+            </li>
+            <li>
+                <a href="#" class="dropdown-item">Something else here</a>
+            </li>
+        </ul>
+    </div>
+</div>
+
+<!--=========Modal=========-->
+
+<div class="container mt-4">
+<!--    button trigger modal-->
+    <button type="button"
+            class="btn btn-primary"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal"
+    >
+        Launch demo modal
+    </button>
+<!--    Modal-->
+    <div class="modal fade"
+         id="exampleModal"
+         tabindex="-1"
+    >
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Modal title</h5>
+                    <button type="button"
+                            class="btn-close"
+                            data-bs-dismiss="modal"
+                    ></button>
+                </div>
+                <div class="modal-body">
+                    ...
+                </div>
+                <div class="modal-footer">
+                    <button type="button"
+                            class="btn btn-secondary"
+                     >
+                         Close
+                    </button>
+                    <button type="button"
+                            class="btn btn-primary"
+                     >
+                        Save changes
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--======Carousels======-->
+
+<div class="container mt-4">
+    <div id="carouselExampleControls"
+         class="carousel slide"
+         data-bs-ride="carousel"
+    >
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="https://via.placeholder.com/900x300"
+                     class="d-block w-100"
+                     alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://via.placeholder.com/900x300"
+                     class="d-block w-100"
+                     alt="...">
+            </div>
+            <div class="carousel-item">
+                <img src="https://via.placeholder.com/900x300"
+                     class="d-block w-100"
+                     alt="...">
+            </div>
+        </div>
+        <button class="carousel-control-prev"
+                type="button"
+                data-bs-target="#carouselExampleControls"
+                data-bs-slide="prev"
+        >
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">이전</span>
+        </button>
+        <button class="carousel-control-next"
+                type="button"
+                data-bs-target="#carouselExampleControls"
+                data-bs-slide="next"
+        >
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">다음</span>
+        </button>
+    </div>
 </div>
 
 
