--- a/index.html
+++ b/index.html
@@ -271,6 +271,37 @@
     </button>
 </div>
 
+<!--=====Pagination=====-->
+
+<div class="container mt-4">
+    <nav>
+        <ul class="pagination">
+            <li class="page-item"><a href="#" class="page-link">이전</a></li>
+            <li class="page-item"><a href="#" class="page-link">1</a></li>
+            <li class="page-item"><a href="#" class="page-link">2</a></li>
+            <li class="page-item"><a href="#" class="page-link">3</a></li>
+            <li class="page-item"><a href="#" class="page-link">4</a></li>
+            <li class="page-item"><a href="#" class="page-link">5</a></li>
+            <li class="page-item"><a href="#" class="page-link">6</a></li>
+            <li class="page-item"><a href="#" class="page-link">다음</a></li>
+        </ul>
+    </nav>
+</div>
+
+<!--=====Breadcrumbs=====-->
+
+<div class="container mt-4">
+    <nav>
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="#">Home</a></li>
+            <li class="breadcrumb-item"><a href="#">Library</a></li>
+            <li class="breadcrumb-item active">Data</li>
+        </ol>
+    </nav>
+</div>
+
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
         crossorigin="anonymous"></script>
@@ -289,6 +320,7 @@
         return new bootstrap.Popover(popoverTriggerEl);
     })
 </script>
-
+<script>
+</script>
 </body>
 </html>
