--- a/index.html
+++ b/index.html
@@ -300,6 +300,48 @@
     </nav>
 </div>
 
+<!--=====Progress bars=====-->
+
+<div class="container mt-4">
+    <div class="progress">
+        <div class="progress-bar"
+             role="progressbar"
+             style="width: 25%"
+             aria-valuemax="100"
+             aria-valuemin="0"
+             aria-valuenow="25"
+        >
+            25%
+        </div>
+    </div>
+</div>
+
+<!--=====Spinners=====-->
+
+<div class="container mt-4">
+    <div class="spinner-border text-primary" role="status">
+        <span class="visually-hidden">Loading...</span>
+    </div>
+</div>
+
+<!--=====Toast=====-->
+
+<div class="container mt-4">
+    <div id="toastElement" class="toast" role="alert">
+        <div class="toast-header">
+            <strong class="me-auto">Bootstrap</strong>
+            <small>11 min ago</small>
+            <button type="button"
+                    class="btn-close"
+                    data-bs-dissmiss="toast"
+            ></button>
+        </div>
+        <div class="toast-body">
+            Hello, world! This is a toast message.
+        </div>
+    </div>
+</div>
+
 
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
@@ -321,6 +363,12 @@
     })
 </script>
 <script>
+    var toastElement = document.getElementById("toastElement");
+    const toast = new bootstrap.Toast(toastElement);
+
+    setTimeout(function() {
+        toast.show();
+    },1000);
 </script>
 </body>
 </html>
