--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
 
 <!--==============그리드===============-->
 
-<!--<h1>안녕하세요 부트스트랩 5!</h1>-->
-<!--<div class="container">-->
-<!--    <div class="row">-->
-<!--        <div class="col-md-4" style="background-color: lightblue">-->
-<!--            첫번째 열-->
-<!--        </div>-->
-<!--        <div class="col-md-4" style="background-color: lightgreen">-->
-<!--            두번째 열-->
-<!--        </div>-->
-<!--        <div class="col-md-4" style="background-color: lightyellow">-->
-<!--            세번째 열-->
-<!--        </div>-->
-<!--    </div>-->
-<!--</div>-->
+<h1>안녕하세요 부트스트랩 5!</h1>
+<div class="container">
+    <div class="row">
+        <div class="col-md-4" style="background-color: lightblue">
+            첫번째 열
+        </div>
+        <div class="col-md-4" style="background-color: lightgreen">
+            두번째 열
+        </div>
+        <div class="col-md-4" style="background-color: lightyellow">
+            세번째 열
+        </div>
+    </div>
+</div>
 
 <!--==========네비게이션===========-->
 
